Fixed a possible overflow in manage reservations (#286)
When only one reservation is listed in manage reservations page, the dropdown actions for the reservation could be hidden by the footer. This fix increases reservation list margin so that all the dropdown actions fit in view.

--- a/app/pages/manage-reservations/_manage-reservations-page.scss
+++ b/app/pages/manage-reservations/_manage-reservations-page.scss
@@ -37,5 +37,6 @@
 
   &__list {
     margin-top: 20px;
+    margin-bottom: 32px;
   }
 }
